@@ -4,7 +4,7 @@ export(labkey.selectRows, labkey.executeSql, makeFilter, labkey.insertRows, labk
 	labkey.getLookupDetails, labkey.makeRemotePath, getSession, getRows, getLookups, lsSchemas, lsFolders, lsProjects, labkey.saveBatch,
 	labkey.curlOptions, labkey.setCurlOptions, labkey.acceptSelfSignedCerts, labkey.setDefaults, labkey.domain.inferFields,
 	labkey.domain.drop, labkey.domain.get, labkey.domain.create, labkey.domain.createDesign, labkey.domain.save, labkey.setDebugMode,
-	labkey.domain.createAndLoad)
+	labkey.domain.createAndLoad, labkey.rstudio.initReport, labkey.rstudio.saveReport, labkey.rstudio.isInitialized)
 export("getSchema")
 export("getFolderPath")
 export("saveResults")
