@@ -1,8 +1,9 @@
 Changes in version 2.2.2
-  o New APIs for getting, creating, inferring and dropping LabKey domains
+  o New APIs for getting, creating, inferring and dropping LabKey domains (requires LabKey server version 18.2 or later)
   o Fix for Issue #18: labkey.executeSql breaks when using the containerFilter option
   o Add labkey.setDebugMode(TRUE) option to output GET/POST raw response info
   o Fix for labkey.selectRows() API support for colSelect=c(*) regression
+  o Support for RStudio integration
 
 Changes in version 2.2.1
   o Support for LabKey CSRF tokens (cross site request forgery)
